packages/tailwind-config/variables.css
/* ... */
/* -------------------- Theme tokens -------------------- */
@theme {
  --color-*: initial;
  --color-white: oklch(1 0 0);
  --color-black: oklch(0.1482 0.0034 196.79);
  /* ---------- Border radius ---------- */
  --radius-4xl: initial;
  /* ---------- Border width ---------- */
  --border-width-*: initial;
  --border-width-sm: 1px;
  --border-width-md: 1.5px;
  --border-width-lg: 2px;
  --border-width-xl: 2.5px;
  --default-border-width: 1px;
  /* ---------- Outline width ---------- */
  --outline-width-*: initial;
  /* ---------- Ring width ---------- */
  --ring-width-*: initial;
  /* ---------- Shadow ---------- */
  --shadow-*: initial;
  --shadow-raised-100: 0px 1px 6px -1px #292f3d08, 0px 1px 4px 0px #292f3d0a;
  --shadow-raised-200: 0px 1px 2px -1px #292f3d0f, 0px 1px 3px 0px #292f3d0d;
  --shadow-raised-300: 0px 2px 4px -1px #292f3d0a, 0px 4px 6px -1px #292f3d0d;
  --shadow-overlay-100: 0px 10px 10px -5px #292f3d0a, 0px 10px 40px -5px #292f3d0a;
  --shadow-overlay-200: 0px 10px 10px -10px #292f3d0a, 0px 30px 60px -12px #292f3d1a;
  --shadow-direction-left: -10px 0px 30px -5px #292f3d05, -5px 0px 80px -5px #292f3d0a;
  --shadow-direction-right: 10px 0px 30px -5px #0000000a, 5px 0px 80px -5px #0000000a;
  /* --------- Height --------- */
  --height-header: 3.25rem;
  /* --------- Padding --------- */
  --padding-page: 1.35rem;
  --padding-page-x: 1.35rem;
  --padding-page-y: 1.35rem;
}
/* ... */

